feat: Add dark logo to UI, connect UI service to a new public network, and simplify gateway port binding in docker-compose.

--- a/devops-agent/ui/index.html
+++ b/devops-agent/ui/index.html
@@ -193,6 +193,7 @@
 <body>
     <header>
         <h1>
+            <img src="assets/logo-dark.png" alt="Talos" style="height: 24px; vertical-align: middle;">
             <span>🛡️ Talos DevOps Agent</span>
             <span class="badge demo">Simulation Mode</span>
         </h1>
